chapter2/1.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teht-107
spec:
  type: ClusterIP
  selector:
    app: teht-107
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
